--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zavio-mobile",
+  "name": "sportvia-mobile",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.27",
     "expo-camera": "~17.0.10",
+    "expo-dev-client": "~6.0.20",
     "expo-modules-core": "~3.0.28",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
@@ -31,8 +32,7 @@
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
-    "react-native-vector-icons": "^10.3.0",
-    "react-native-vision-camera": "^4.7.3"
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
